removed functions from auth service interface
